# VG

./: .gitignore  CMakeLists.txt
example/: CMakeLists.txt  main.cpp
vg/: CMakeLists.txt  vg.cpp  vg.h
vg/core/: camera.h  common.h  entity.h  log.h  types.h
vg/core/vulkan/: device.cpp  device.h  instance.h  physicalDevice.h  renderContext.h  swapchain.h  util.h
vg/imgui/: imgui_win32.cpp  imgui_win32.h
vg/render/: buffer.cpp  buffer.h  commandBuffer.h  common.h  context.cpp  context.h  device.cpp  device.h  format.h  geometryBuffer.h  geometryInfo.h  instance.h  renderTarget.h  renderer.cpp  renderer.h  shader.cpp  shader.h  type.h  util.h
vg/render/state/: axisRenderState.h  geometryRenderState.h  gridRenderState.h  imguiRenderState.h  pickRenderState.h  renderState.h
vg/render/vk/: pipeline.cpp  shader.cpp  vkt.cpp  vkt.h  vktypes.h
vg/util/: entry.h  entry_win.cpp  geometry.cpp  geometry.h  key.h
